<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:textColor="@color/black"
        android:textSize="@dimen/sp35"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="cuong02n\n04phamduc"
        android:textSize="@dimen/sp20"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/sp20"
        android:text="@string/email"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/sp20"
        android:text="04phamduc@gmail.com"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginStart="@dimen/dp10"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:src="@drawable/vietnam"/>
        <ImageView
            android:layout_marginStart="@dimen/dp10"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:src="@drawable/vietnam"/>
        <ImageView
            android:layout_marginStart="@dimen/dp10"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:src="@drawable/vietnam"/>
        <ImageView
            android:layout_marginStart="@dimen/dp10"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:src="@drawable/vietnam"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_privacy_policy"
        android:backgroundTint="@color/cot_hang_o_vuong"
        android:layout_width="@dimen/dp200"
        android:layout_height="@dimen/dp50"
        android:textSize="@dimen/sp15"
        android:textColor="@color/black"
        android:text="@string/privacy_amp_policy"/>
</LinearLayout>